feat: update colors to match across sdr and hdr

--- a/src/components/app/controls/controls.css
+++ b/src/components/app/controls/controls.css
@@ -217,7 +217,7 @@ a.controls__option:hover {
 }
 
 .controls__card__active {
-  color: var(--ui);
+  color: var(--link);
 }
 
 @media (pointer: fine) {
