--- a/src/components/app/journey/journey.css
+++ b/src/components/app/journey/journey.css
@@ -46,7 +46,7 @@
   background-color: var(--bg-base);
   z-index: 3;
   color: var(--fg-muted);
-  font-size: 16px;
+  font-size: calc(16px * 0.875);
   max-width: 100vw;
 }
 
@@ -111,9 +111,10 @@
 }
 
 .journey__items__item {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  gap: 0.4em;
   align-items: center;
-  justify-content: space-between;
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
   color: var(--fg);
@@ -122,9 +123,12 @@
   transition:
     background-color 0.25s ease,
     color 0.25s ease;
+}
+
+.journey__items__item__title {
   overflow: hidden;
-  text-wrap: nowrap;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .journey__items__item:hover {
