--- a/src/components/app/jump-button/jump-button.css
+++ b/src/components/app/jump-button/jump-button.css
@@ -1,21 +1,15 @@
-.bar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 16px;
+button {
+  padding: 8px 24px;
+  min-width: 8em;
+  outline: 2.25px solid var(--toner);
+  outline-offset: -2.25px;
   font-size: 16px;
 }
 
-.button {
-  padding: 8px 24px;
-  min-width: 5em;
-  outline: 2.25px solid var(--toner);
-  outline-offset: -2.25px;
-}
-
 @media (pointer: coarse) and (max-width: 768px) {
-  .button {
+  button {
     min-width: auto;
+    min-height: 48px;
     width: 100%;
     flex-grow: 1;
   }
