--- a/src/routes/(app)/[source]/[id]/index.css
+++ b/src/routes/(app)/[source]/[id]/index.css
@@ -1,11 +1,3 @@
-.bar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 16px;
-  font-size: 16px;
-}
-
 .button {
   padding: 8px 24px;
   min-width: 5em;
@@ -17,6 +9,7 @@
   .button {
     min-width: auto;
     width: 100%;
+    max-width: calc(100% - 48px);
     flex-grow: 1;
   }
 }
